# icepick

./: Cargo.toml  LICENSE  README.md  makefile
.github/workflows/: build.yml  rust-clippy.yml
bench/: 10000.txt  20000.txt  results.txt
benches/: gen_random_string_file  score.rs  search.rs
benchmarks/: 30000.txt
src/: ansi.rs  bench_main.rs  configuration.rs  fake_tty.rs  lib.rs  main.rs  renderer.rs  score.rs  screen.rs  search.rs  sorted_result_set.rs  text.rs  tty.rs  winsize.rs
tests/: ansi_test.rs  renderer_test.rs  score_test.rs  screen_test.rs  search_test.rs  text_test.rs
