[package]
name = "icepick"
version = "0.0.3"
authors = ["Felipe Sere <felipesere@gmail.com>",
           "Uku Taht <uku.taht@gmail.com>",
           "Carol Nichols <cnichols@thinkthroughmath.com>",
           "Erwin van Eijk <erwinvaneijk@gmail.com>"]

description = "A command-line fuzzy matcher based on Gary Bernheards selecta"
homepage = "http://github.com/felipesere/icepick"
repository = "http://github.com/felipesere/icepick"

readme = "README.md"

keywords = ["search", "command-line", "tool"]

license = "MIT"

[lib]
name = "icepick"
doctest = false
test = true
doc = false

[dependencies]
libc = "0.2.139"
getopts = "0.2.21"
ansi_term = "0.12"

[profile.release]
opt-level = 3
